--- a/src/public/styles/style.css
+++ b/src/public/styles/style.css
@@ -1,44 +1,4 @@
-@font-face {
-    font-family: "Roboto";
-    src: url(../assets/fonts/roboto/Roboto-Thin.ttf) format("truetype");
-    font-weight: 100;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Roboto";
-    src: url(../assets/fonts/roboto/Roboto-Light.ttf) format("truetype");
-    font-weight: 300;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Roboto";
-    src: url(../assets/fonts/roboto/Roboto-Regular.ttf) format("truetype");
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Roboto";
-    src: url(../assets/fonts/roboto/Roboto-Medium.ttf) format("truetype");
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Roboto";
-    src: url(../assets/fonts/roboto/Roboto-Bold.ttf) format("truetype");
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Roboto";
-    src: url(../assets/fonts/roboto/Roboto-Black.ttf) format("truetype");
-    font-weight: 900;
-    font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 :root {
 	/* === RecuEngine Colors === */
